@@ -167,6 +167,22 @@ class HttpHandler(WebHandler):
     def login(self, auth):
         self._redirect("browse")
 
+    @checkAuth(admin=True)
+    def log(self, auth):
+        """
+        Send the current repository log (if one exists).
+        This method requires admin access.
+        """
+        if not self.cfg.logFile:
+            raise apache.SERVER_RETURN, apache.HTTP_NOT_FOUND
+        if not os.path.exists(self.cfg.logFile):
+            raise apache.SERVER_RETURN, apache.HTTP_NOT_FOUND
+        if not os.access(self.cfg.logFile, os.R_OK):
+            raise apache.SERVER_RETURN, apache.HTTP_FORBIDDEN
+        self.req.content_type = "application/octet-stream"
+        self.req.sendfile(self.cfg.logFile)
+        raise apache.SERVER_RETURN, apache.OK
+
     @strFields(char = '')
     @checkAuth(write=False)
     def browse(self, auth, char):
